# CMAN-spider

./: .gitignore  LICENSE.md  README.md  README.zh-cn.md  main.py  pyproject.toml
configs/: __init__.py
modules/: mod.py
spider/: __init__.py
utils/: logger.py
