[tool.poetry]
name = "cman-spider"
version = "0.0.1"
description = "Spider for CMAN"
authors = ["XYCode <xycode-xyc@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.0.0"
apscheduler = "^3.10.4"
rich = "^13.7.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.3"
orjson = "^3.9.13"
objprint = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
